added Andrew Bart

--- a/index.html
+++ b/index.html
@@ -278,6 +278,13 @@
                                 <h4>Full-stack Developer</h4>
                                 <p>18+ years of software development and leading teams, working with a multitude of program languages, at Sun Microsystems and Oracle Corporation.</p>
                             </div>
+                            <div class="person">
+                                <img src="assets/img/andrew-bart.png">
+                                <h3>Andrew Bart</h3>
+                                <h4>Chief Growth Officer</h4>
+                                <p>Early growth stage venture capital investor, advisor, and C-Suite executive. Initiated startup team at iCrossing which ultimately exited to Hearst Corporation for $325 million.  Founded, bootstrapped, and successfully exited a supply chain management and lead generation technology platform to a global pet product manufacturer.
+                                </div>
+                            </div>
                         </div>
 
                         <div class="text-center feature-title" style="padding-top:20px">Our Advisors</div>
