added date to timer, changed timer to 11/14/2017 midnight UTC

--- a/index.html
+++ b/index.html
@@ -113,6 +113,8 @@
                 </span> </div>
             </div>
 
+            <div id="datePrettyElement"> (November 14th, 2017 00:00:01 UTC) </div>
+
             <div id="signup" class="feature signup">
                 <div class="container">
                     <div class="text-center signup-title">Sign up for our newsletter &amp; updates</div>
